<resources>
    <string name="app_name">CoffeHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gui">guiBtn</string>
    <string name="default_web_client_id">837032553365-1hpvf8nr4jp3568vr4rfn42l8fmqcj33.apps.googleusercontent.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="API">http://192.168.0.109:3000/</string>
    <string name="BASE_URL">http://192.168.0.109:3000/</string>
    <string name="Login">http://192.168.0.109:3000/auth/login</string>
    <string name="Sign_up">http://192.168.0.109:3000/auth/create-user</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="google_btn">Đăng nhập bằng google</string>
    <string name="login_text_dang_nhap">Đăng Nhập</string>
    <string name="login_text_chao_mung">Chào mừng bạn !</string>
    <string name="login_text_dang_nhap_tiep_tuc">Đăng Nhập để tiếp tục nha</string>
    <string name="login_hint_email">Nhập email hoặc tên đăng nhập</string>
    <string name="login_text_mat_khau">Mật khẩu</string>
    <string name="login_hint_password">Nhập mật khẩu</string>
    <string name="login_text_quen_mat_khau">Quên mật khẩu ?</string>
    <string name="login_text_dang_nhap_button">Đăng Nhập</string>
    <string name="login_text_ban_da_co_tai_khoan">Bạn chưa có tài khoản? </string>
    <string name="login_text_dang_ky"> Đăng ký</string>
    <string name="login_email_hoạc_name">Email hoặc tên đăng nhập</string>
    <string name="signup_text_dang_ky">Đăng Ký</string>
    <string name="signup_text_chao_mung">Chào mừng bạn !</string>
    <string name="signup_text_dang_ky_tiep_tuc">Đăng ký để tiếp tục nha</string>
    <string name="signup_hint_ten_dang_nhap">Nhập tên đăng nhập</string>
    <string name="signup_text_email">Email</string>
    <string name="signup_hint_email">Nhập email</string>
    <string name="signup_text_mat_khau">Mật khẩu</string>
    <string name="signup_hint_mat_khau">Nhập mật khẩu</string>
    <string name="signup_text_dang_ky_button">Đăng Ký</string>
    <string name="signup_text_ban_da_co_tai_khoan">Bạn đã có tài khoản? </string>
    <string name="signup_text_dang_nhap">Đăng nhập</string>
    <string name="signup_ten_dang_nhap">Tên đăng nhập</string>
    <string name="signup_text_phone">Số Điện Thoại</string>
    <string name="signup_hint_phone">Nhập số điện thoại</string>
    <string name="forgot_new_password">Mật khẩu mới</string>
    <string name="forgot_enter_password">Mật khẩu</string>
    <string name="forgot_enter_new_password">Nhập mật khẩu mới</string>
    <string name="forgot_confirm_password">Xác nhận mật khẩu</string>
    <string name="forgot_retype_password">Nhập lại mật khẩu</string>
    <string name="forgot_send">Gửi</string>
    <string name="input_email_QuenMK">Quên Mật Khẩu</string>
    <string name="input_email">Nhập email hoặc SĐT</string>
    <string name="input_email_sendotp">Gửi OTP</string>
    <string name="order_list_quanl_donhang">Quản Lý Đơn Hàng</string>
    <string name="otpsend_xac_minh">Xác Minh</string>
    <string name="otpsend_Nhap_ma">Nhập mã xác nhận</string>
    <string name="otpsend_k_nhan_dk_ma">Không nhận được mã</string>
    <string name="otpsend_gui_lai">Gửi lại</string>
    <string name="otpsend_xac_nhan">Xác nhận</string>
    <string name="dialog_cus_comple_register">Đăng ký thành công ! </string>
    <string name="dialog_fogot_pass_true">Đổi mật khẩu thành công</string>
    <string name="dialog_otp">Hãy nhập mã OTP</string>
    <string name="dialig_otp_xac_thuc">Xác thực</string>
    <string name="menu_admin_botton_home">Trang chủ</string>
    <string name="menu_admin_botton_addP_prodct">Thêm mới</string>
    <string name="menu_admin_botton_setting">Cài đặt</string>
    <string name="menu_categori_delete">Xoá</string>
    <string name="nenu_category_detail">Chi tiết</string>
    <string name="menu1_home">Trang chủ</string>
    <string name="menu1_history">Đơn hàng</string>
    <string name="menu1_cart">Giỏ hàng</string>
    <string name="menu1_profile">Profile</string>
    <string name="menu_drawer_change_pas">Đổi mật khẩu</string>
    <string name="menu_drawer_change_language">Ngôn ngữ</string>
    <string name="menu_drawer_privecy_policy">Chính sách bảo mật</string>
    <string name="menu_drawer_notification">Cài đặt thông báo</string>
    <string name="menu_drawer_logout">Đăng xuất</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="light_mode">Chế độ sáng</string>
    <string name="menu_drawer_admin_orderlist">Danh sách đơn hàng</string>
    <string name="menu_drawer_admin_orderlist_user">Đơn hàng theo người dùng</string>
    <string name="frag_history_hoan_thanh">Hoàn Thành</string>
    <string name="frag_history_dang_cho">Đang Chờ</string>
    <string name="order_custom_item_tiltle">Đơn hàng đã hoàn thành</string>
    <string name="order_not_custom_item">Đơn hàng chưa hoàn thành</string>
    <string name="day">Ngày : </string>
    <string name="time">"Thời gian :  "</string>
    <string name="sum">Tổng : </string>
    <string name="frag_TK_month">Tháng</string>
    <string name="frag_TK_label">Thống Kê</string>
    <string name="frag_TK_DH_label">Thống Kê Đơn Hàng</string>
    <string name="frag_TK_DT_label">Thống Kê Doanh Thu</string>
    <string name="frag_TK_SP_label">Thống Kê Sản Phẩm</string>
    <string name="frag_TK_DH_TabItem">Đơn Hàng</string>
    <string name="frag_TK_DT_TabItem">Doanh Thu</string>
    <string name="frag_TK_SP_TabItem">Sản Phẩm</string>
    <string name="frag_TK_week">Tuần</string>
    <string name="Edit"><![CDATA[<u>Edit</u>.]]></string>
    <string name="don_hang_da_dat">Đơn hàng đã đặt</string>
    <string name="dialog_chose_type">Xác Thực Tài Khoản</string>
    <string name="dialog_chose_type_authen">Kiểu Xác Thực</string>
    <string name="dialog_chose_Phone">Số Điện Thoại</string>
    <string name="account">Account</string>
    <string name="cart">cart</string>
    <string name="order">Order</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="searchItem">Tìm kiếm sản phẩm</string>
    <string name="home">Trang chủ</string>
    <string name="trangcanhan">Trang cá nhân</string>
    <string name="gioHang">Giỏ hàng của bạn</string>
    <string name="diaDiemGiaoHang">Địa chỉ nhận hàng</string>
    <string name="manthien">97 Man Thiện</string>
    <string name="phone">Số điện thoại</string>
    <string name="phone1">0966666666</string>
    <string name="tomtat">Tóm tắt thanh toán</string>
    <string name="giatien">Giá tiền</string>
    <string name="phigiaohang">Phí ship</string>
    <string name="tongThanhToan">Tổng</string>
    <string name="tienMat">Thanh toán khi nhận hàng</string>
    <string name="datHangNgay">Đặt đơn</string>
    <string name="phiGiaoHang">20,000đ</string>
    <string name="giatxtprice">"Giá : "</string>
    <string name="del_product_cart">Xóa sản phẩm khỏi giỏ hàng</string>
    <string name="confirm_del_product_cart">Bạn có chắc chắn muốn xóa sản phẩm khỏi giỏ hàng?</string>
    <string name="co">Có</string>
    <string name="no">Không</string>
    <string name="color_selected_size">#94a3b8</string>
    <string name="qr_saved">QR Code đã được lưu trước đó</string>
    <string name="qr_save">QR Code đã được lưu</string>
    <string name="scan_qr">Quét mã QR</string>
    <string name="name_host">Người nhận : Nguyễn Tiến Nhật</string>
    <string name="price_bank">Số tiền :</string>
    <string name="note_bank">"Mô tả : "</string>
    <string name="cantfind">Không tìm thấy giao dịch, hãy kiểm tra kĩ và thử lại !</string>
    <string name="time_con_lai">"Thời gian còn lại: "</string>
    <string name="nhap_dia_chi">Vui lòng nhập địa chỉ</string>
    <string name="nhap_phone">Vui lòng nhập số điện thoại</string>
    <string name="phone_fail">Số điện thoại không hợp lệ</string>
    <string name="payment_method">Chọn phương thức thanh toán</string>
    <string name="thanh_toan_thanh_cong">Thanh toán thành công</string>
    <string name="don_hang_dang_xu_ly">Đơn hàng của bạn đang được xử lý.</string>
    <string name="thong_tin">Thông tin</string>
    <string name="thanh_cong">Thành công</string>
    <string name="them_sp_thanh_cong">Thêm sản phẩm vào giỏ hàng thành công!</string>
    <string name="che_do_toi">Chế độ tối</string>
    <string name="tim_kiem_ca_phe">Tìm kiếm cà phê</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="chon_size">Chọn size</string>
    <string name="so_luong">Số lượng</string>
    <string name="_1">1</string>
    <string name="them_gio_hang">Thêm vào giỏ hàng</string>
    <string name="tro_ve">Trở về</string>
    <string name="luu_qr">Lưu QR</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="empty_cart">Giỏ hàng rỗng</string>
    <string name="thay_doi">Thay đổi</string>
    <string name="cach_thanh_toan">Phương thức thanh toán</string>
    <string name="chi_tiet_don_hang">Chi tiết đơn hàng</string>
    <string name="don_hang_cua_ban">Đơn hàng của bạn</string>
    <string name="chon_size_khi_them_vao_cart">Chọn Size trước khi thêm vào giỏ hàng</string>
    <string name="them_vao_cart_thanh_cong">Đã thêm sản phẩm vào giỏ hàng</string>
    <string name="goodmorning">Chào buổi sáng</string>
    <string name="goodluch">Chào buổi trưa</string>
    <string name="goodafternoon">Chào buổi chiều</string>
    <string name="goodnight">Chào buổi tối</string>
    <string name="change_paswrod">Thay đổi Mật Khẩu</string>
    <string name="change_paswrod_old_passwrod">Nhập lại mật khẩu</string>
    <string name="change_paswrod_old_pass_hint">Mật khẩu cũ</string>
    <string name="change_paswrod_new_passwrod">Nhập mật khẩu mới</string>
    <string name="change_paswrod_new_pass_hint">Mật khẩu mới</string>
    <string name="change_paswrod_confirm_passwrod">Nhập lại mật khẩu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>