<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/menu_admin_botton_home" />
    <item
        android:id="@+id/addProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/add_circle"
        android:title="@string/menu_admin_botton_addP_prodct" />
    <item
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/setting"
        android:title="@string/menu_admin_botton_setting" />

</menu>